Special characters like '#' did not get converted properly on transformations from/to file path, URL and URI. Added some convenience methods in URLUtil. Added unit-tests for that with some explanations in code and little in comments. Also extended methods and test-parameter for IT-tests. I will do some more testing, because currently it is unclear whether this entirly fixes #35 [CC-39]; but the described buggy result was exactly the same in my tests.